--- a/Message/Message/MessageCell.xib
+++ b/Message/Message/MessageCell.xib
@@ -13,15 +13,15 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MessageCell" customModule="Message" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ykO-dr-pE8">
-                        <rect key="frame" x="20" y="10" width="280" height="24"/>
+                        <rect key="frame" x="20" y="10" width="65.333333333333329" height="24"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HmZ-is-9Gc">
-                                <rect key="frame" x="12" y="12" width="256" height="0.0"/>
+                                <rect key="frame" x="12.000000000000004" y="12" width="41.333333333333343" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -29,6 +29,7 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
+                            <constraint firstAttribute="width" relation="lessThanOrEqual" constant="250" id="AKP-NA-p21"/>
                             <constraint firstAttribute="bottom" secondItem="HmZ-is-9Gc" secondAttribute="bottom" constant="12" id="Etf-Ey-Zbq"/>
                             <constraint firstItem="HmZ-is-9Gc" firstAttribute="leading" secondItem="ykO-dr-pE8" secondAttribute="leading" constant="12" id="YzW-qT-SgQ"/>
                             <constraint firstAttribute="trailing" secondItem="HmZ-is-9Gc" secondAttribute="trailing" constant="12" id="hyn-QE-uwh"/>
